
[TestClassifyDTSFile_GlobalsOnly/simple_global_declarations - 1]
map[string]interface {}{
    "globalDeclsCount":   int(3),
    "hasTopLevelExports": bool(false),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_GlobalsOnly/ambient_type_declarations - 1]
map[string]interface {}{
    "globalDeclsCount":   int(2),
    "hasTopLevelExports": bool(false),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_GlobalsOnly/global_namespace - 1]
map[string]interface {}{
    "globalDeclsCount":   int(1),
    "hasTopLevelExports": bool(false),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_GlobalsOnly/multiple_global_interfaces - 1]
map[string]interface {}{
    "globalDeclsCount":   int(3),
    "hasTopLevelExports": bool(false),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_TopLevelExports/export_interface - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_TopLevelExports/export_type_alias - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_TopLevelExports/export_function - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_TopLevelExports/export_variable - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_TopLevelExports/multiple_exports - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(3),
}
---

[TestClassifyDTSFile_TopLevelExports/named_exports - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_TopLevelExports/re-export_from_module - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_TopLevelExports/export_all - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_NamedModules/single_named_module - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(false),
    "namedModules":       map[string]int{"lodash":2},
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_NamedModules/multiple_named_modules - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(false),
    "namedModules":       map[string]int{"lodash":1, "lodash/fp":1},
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_NamedModules/named_module_with_scoped_package - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(false),
    "namedModules":       map[string]int{"@types/node":1},
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_NamedModules/named_module_alongside_globals - 1]
map[string]interface {}{
    "globalDeclsCount":   int(1),
    "hasTopLevelExports": bool(false),
    "namedModules":       map[string]int{"my-package":1},
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_ExportEquals/export_equals_namespace - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(2),
}
---

[TestClassifyDTSFile_ExportEquals/export_equals_with_types - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(3),
}
---

[TestClassifyDTSFile_MixedFile/globals_and_named_modules - 1]
map[string]interface {}{
    "globalDeclsCount":   int(2),
    "hasTopLevelExports": bool(false),
    "namedModules":       map[string]int{"my-pkg":1, "other-pkg":1},
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_MixedFile/exports_and_named_modules - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModules":       map[string]int{"sub-module":1},
    "packageDeclsCount":  int(1),
}
---

[TestClassifyDTSFile_MixedFile/complex_mixed_file - 1]
map[string]interface {}{
    "globalDeclsCount":   int(1),
    "hasTopLevelExports": bool(false),
    "namedModules":       map[string]int{"package-a":1, "package-b":1},
    "packageDeclsCount":  int(0),
}
---

[TestClassifyDTSFile_TopLevelExports/export_class - 1]
map[string]interface {}{
    "globalDeclsCount":   int(0),
    "hasTopLevelExports": bool(true),
    "namedModulesCount":  int(0),
    "packageDeclsCount":  int(1),
}
---
